# backend/api/pkg/common/gen/proto/v1/photos_service.pb.gw.go
@@ -119,6 +119,32 @@ func local_request_PhotosService_GetPhotoGroup_0(ctx context.Context, marshaler 
 
 }
 
+func request_PhotosService_SetMainPhotoGroup_0(ctx context.Context, marshaler runtime.Marshaler, client PhotosServiceClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq SetMainPhotoGroupRequest
+	var metadata runtime.ServerMetadata
+
+	if err := marshaler.NewDecoder(req.Body).Decode(&protoReq); err != nil && err != io.EOF {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+
+	msg, err := client.SetMainPhotoGroup(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
+	return msg, metadata, err
+
+}
+
+func local_request_PhotosService_SetMainPhotoGroup_0(ctx context.Context, marshaler runtime.Marshaler, server PhotosServiceServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq SetMainPhotoGroupRequest
+	var metadata runtime.ServerMetadata
+
+	if err := marshaler.NewDecoder(req.Body).Decode(&protoReq); err != nil && err != io.EOF {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+
+	msg, err := server.SetMainPhotoGroup(ctx, &protoReq)
+	return msg, metadata, err
+
+}
+
 // RegisterPhotosServiceHandlerServer registers the http handlers for service PhotosService to "mux".
 // UnaryRPC     :call PhotosServiceServer directly.
 // StreamingRPC :currently unsupported pending https://github.com/grpc/grpc-go/issues/906.
@@ -172,6 +198,31 @@ func RegisterPhotosServiceHandlerServer(ctx context.Context, mux *runtime.ServeM
 		}
 
 		forward_PhotosService_GetPhotoGroup_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+
+	})
+
+	mux.Handle("POST", pattern_PhotosService_SetMainPhotoGroup_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		var stream runtime.ServerTransportStream
+		ctx = grpc.NewContextWithServerTransportStream(ctx, &stream)
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		var err error
+		var annotatedContext context.Context
+		annotatedContext, err = runtime.AnnotateIncomingContext(ctx, mux, req, "/pb.v1.PhotosService/SetMainPhotoGroup", runtime.WithHTTPPathPattern("/v1/photos/groups/main_photo"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := local_request_PhotosService_SetMainPhotoGroup_0(annotatedContext, inboundMarshaler, server, req, pathParams)
+		md.HeaderMD, md.TrailerMD = metadata.Join(md.HeaderMD, stream.Header()), metadata.Join(md.TrailerMD, stream.Trailer())
+		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
+		if err != nil {
+			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_PhotosService_SetMainPhotoGroup_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 
 	})
 
@@ -260,6 +311,28 @@ func RegisterPhotosServiceHandlerClient(ctx context.Context, mux *runtime.ServeM
 
 	})
 
+	mux.Handle("POST", pattern_PhotosService_SetMainPhotoGroup_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		var err error
+		var annotatedContext context.Context
+		annotatedContext, err = runtime.AnnotateContext(ctx, mux, req, "/pb.v1.PhotosService/SetMainPhotoGroup", runtime.WithHTTPPathPattern("/v1/photos/groups/main_photo"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := request_PhotosService_SetMainPhotoGroup_0(annotatedContext, inboundMarshaler, client, req, pathParams)
+		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
+		if err != nil {
+			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_PhotosService_SetMainPhotoGroup_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+
+	})
+
 	return nil
 }
 
@@ -267,10 +340,14 @@ var (
 	pattern_PhotosService_GetPhotoGroups_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2}, []string{"v1", "photos", "groups"}, ""))
 
 	pattern_PhotosService_GetPhotoGroup_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2, 1, 0, 4, 1, 5, 3}, []string{"v1", "photos", "groups", "group_id"}, ""))
+
+	pattern_PhotosService_SetMainPhotoGroup_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2, 2, 3}, []string{"v1", "photos", "groups", "main_photo"}, ""))
 )
 
 var (
 	forward_PhotosService_GetPhotoGroups_0 = runtime.ForwardResponseMessage
 
 	forward_PhotosService_GetPhotoGroup_0 = runtime.ForwardResponseMessage
+
+	forward_PhotosService_SetMainPhotoGroup_0 = runtime.ForwardResponseMessage
 )
