# backend/api/pkg/common/gen/proto/v1/tags_service_grpc.pb.go
@@ -1,0 +1,107 @@
+// Code generated by protoc-gen-go-grpc. DO NOT EDIT.
+// versions:
+// - protoc-gen-go-grpc v1.3.0
+// - protoc             (unknown)
+// source: proto/v1/tags_service.proto
+
+package pbv1
+
+import (
+	context "context"
+	grpc "google.golang.org/grpc"
+	codes "google.golang.org/grpc/codes"
+	status "google.golang.org/grpc/status"
+)
+
+// This is a compile-time assertion to ensure that this generated file
+// is compatible with the grpc package it is being compiled against.
+// Requires gRPC-Go v1.32.0 or later.
+const _ = grpc.SupportPackageIsVersion7
+
+const (
+	TagsService_GetTagsCategory_FullMethodName = "/pb.v1.TagsService/GetTagsCategory"
+)
+
+// TagsServiceClient is the client API for TagsService service.
+//
+// For semantics around ctx use and closing/ending streaming RPCs, please refer to https://pkg.go.dev/google.golang.org/grpc/?tab=doc#ClientConn.NewStream.
+type TagsServiceClient interface {
+	GetTagsCategory(ctx context.Context, in *GetTagsCategoryRequest, opts ...grpc.CallOption) (*GetTagsCategoryResponse, error)
+}
+
+type tagsServiceClient struct {
+	cc grpc.ClientConnInterface
+}
+
+func NewTagsServiceClient(cc grpc.ClientConnInterface) TagsServiceClient {
+	return &tagsServiceClient{cc}
+}
+
+func (c *tagsServiceClient) GetTagsCategory(ctx context.Context, in *GetTagsCategoryRequest, opts ...grpc.CallOption) (*GetTagsCategoryResponse, error) {
+	out := new(GetTagsCategoryResponse)
+	err := c.cc.Invoke(ctx, TagsService_GetTagsCategory_FullMethodName, in, out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+// TagsServiceServer is the server API for TagsService service.
+// All implementations should embed UnimplementedTagsServiceServer
+// for forward compatibility
+type TagsServiceServer interface {
+	GetTagsCategory(context.Context, *GetTagsCategoryRequest) (*GetTagsCategoryResponse, error)
+}
+
+// UnimplementedTagsServiceServer should be embedded to have forward compatible implementations.
+type UnimplementedTagsServiceServer struct {
+}
+
+func (UnimplementedTagsServiceServer) GetTagsCategory(context.Context, *GetTagsCategoryRequest) (*GetTagsCategoryResponse, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method GetTagsCategory not implemented")
+}
+
+// UnsafeTagsServiceServer may be embedded to opt out of forward compatibility for this service.
+// Use of this interface is not recommended, as added methods to TagsServiceServer will
+// result in compilation errors.
+type UnsafeTagsServiceServer interface {
+	mustEmbedUnimplementedTagsServiceServer()
+}
+
+func RegisterTagsServiceServer(s grpc.ServiceRegistrar, srv TagsServiceServer) {
+	s.RegisterService(&TagsService_ServiceDesc, srv)
+}
+
+func _TagsService_GetTagsCategory_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(GetTagsCategoryRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(TagsServiceServer).GetTagsCategory(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: TagsService_GetTagsCategory_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(TagsServiceServer).GetTagsCategory(ctx, req.(*GetTagsCategoryRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+// TagsService_ServiceDesc is the grpc.ServiceDesc for TagsService service.
+// It's only intended for direct use with grpc.RegisterService,
+// and not to be introspected or modified (even as a copy)
+var TagsService_ServiceDesc = grpc.ServiceDesc{
+	ServiceName: "pb.v1.TagsService",
+	HandlerType: (*TagsServiceServer)(nil),
+	Methods: []grpc.MethodDesc{
+		{
+			MethodName: "GetTagsCategory",
+			Handler:    _TagsService_GetTagsCategory_Handler,
+		},
+	},
+	Streams:  []grpc.StreamDesc{},
+	Metadata: "proto/v1/tags_service.proto",
+}
