# backend/api/swagger/photos_service.swagger.json
@@ -7,6 +7,9 @@
   "tags": [
     {
       "name": "PhotosService"
+    },
+    {
+      "name": "TagsService"
     }
   ],
   "host": "localhost:8080",
@@ -55,7 +58,41 @@
           }
         ],
         "tags": [
-          "photo"
+          "PhotosService"
+        ]
+      }
+    },
+    "/v1/photos/groups/main_photo": {
+      "post": {
+        "summary": "Изменить главную фотографию группы",
+        "operationId": "PhotosService_SetMainPhotoGroup",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "type": "object",
+              "properties": {}
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/Status"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/SetMainPhotoGroupRequest"
+            }
+          }
+        ],
+        "tags": [
+          "PhotosService"
         ]
       }
     },
@@ -86,7 +123,46 @@
           }
         ],
         "tags": [
-          "photo"
+          "PhotosService"
+        ]
+      }
+    },
+    "/v1/tags": {
+      "get": {
+        "summary": "Получение списка категорий тегов",
+        "operationId": "TagsService_GetTagsCategory",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/GetTagsCategoryResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/Status"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "page",
+            "in": "query",
+            "required": false,
+            "type": "integer",
+            "format": "int32"
+          },
+          {
+            "name": "per_page",
+            "in": "query",
+            "required": false,
+            "type": "integer",
+            "format": "int32"
+          }
+        ],
+        "tags": [
+          "TagsService"
         ]
       }
     }
@@ -111,6 +187,19 @@
         "Longitude": {
           "type": "number",
           "format": "double"
+        }
+      }
+    },
+    "GetTagsCategoryResponse": {
+      "type": "object",
+      "properties": {
+        "page": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "per_page": {
+          "type": "integer",
+          "format": "int32"
         }
       }
     },
@@ -251,6 +340,14 @@
             "type": "object",
             "$ref": "#/definitions/PhotoPreview"
           }
+        }
+      }
+    },
+    "SetMainPhotoGroupRequest": {
+      "type": "object",
+      "properties": {
+        "main_photo_id": {
+          "type": "string"
         }
       }
     },
